--- a/index.html
+++ b/index.html
@@ -108,11 +108,9 @@
     </div>
   
   <ol>
-    <ins>
-    <li>LinkedIn</li>
-    <li>Instagram</li>
-    <li>Pinterest</li>
-      </ins>
+    <ins><li>LinkedIn</li></ins>
+    <ins><li>Instagram</li></ins>
+    <ins><li>Pinterest</li></ins>
   </ol>
      
   <!-- Footer section -->
