--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <header>
     <h1>
-    <nav>
+    
       <center>
       <a href="index.html">Pete Thinkful Artist</a></h1>
         </center>
@@ -25,8 +25,6 @@
         <ins><a href="#portfolio">Portfolio</a></ins>
         <ins><a href="#contact">Contact</a></ins> 
         </center>
-    </nav>
-    </h1>
      </header>
   
       <!-- TODO: Add About section here -->
@@ -42,8 +40,7 @@
         <hr>
           <div class="wrapper">
               <div class="row">
-                  <div class="full_column">
-                    <br>I'm an artist living in Denver, Colorado.
+                    I'm an artist living in Denver, Colorado.
                     <p>As an artist, I'm interested in:</p>
                     <ul>
                       <li>Producing abstract art</li>
@@ -63,7 +60,7 @@
           <p>If you're looking to hire an artist or if you're an artist looking
         for a collaborator for your next project, please reach out! I'm so
         excited to work with other artists to create new art.</p>
-<br>  
+<hr>  
       <!-- TODO: Add Portfolio section here -->
 
          <center>
