--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <p>After graduating college, I became an art teacher and worked with
         beginners and professionals. I love art and my works have been
-        featured in major art galleries across the globe.
+        featured in major art galleries across the globe.</p>
         
           <p>If you're looking to hire an artist or if you're an artist looking
         for a collaborator for your next project, please reach out! I'm so
