--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
      </section>
      <section>  
         <h3>Pete's Background</h3>
+       <div class="center">
         
         <p>After graduating college, I became an art teacher and worked with beginners and
        <br>
@@ -70,6 +71,7 @@ professionals. I love art and my works have been
         </p>
         
           <p>If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.</p>
+       </div> 
   <hr>
        </section>
         </main>
