--- a/index.html
+++ b/index.html
@@ -62,15 +62,12 @@
      </section>
      <section>  
         <h3>Pete's Background</h3>
-       <div class="center">
-        
-        <p>After graduating college, I became an art teacher and worked with beginners and
+       <div class="center">        
+        After graduating college, I became an art teacher and worked with beginners and
        <br>
 professionals. I love art and my works have been       
         featured in major art galleries across the globe.
-        </p>
-        
-          <p>If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.</p>
+        If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.
        </div> 
   <hr>
        </section>
