--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
       <!-- TODO: Add About section here -->
       <main>
-        /*This section wrap (ending at </section> ecloses all withing to then be matched to the CSS text-align center */
+       <! /*This section wrap (ending at </section> ecloses all withing to then be matched to the CSS text-align center */>
      <section id="about">    
       <h2 class="center">About</h2>
     
