--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
         <h3>Pete's Background</h3>
        <div class="center">        
         After graduating college, I became an art teacher and worked with beginners and
+	      professionals. I love art and my works have been featured in major art galleries across the 
+        globe.
        <br>
-professionals. I love art and my works have been       
-        featured in major art galleries across the globe.
-        If you're looking to hire an artist or if you're an artist looking for a collaborator for your next project, please reach out! I'm so excited to work with other artists to create new art.
+
+        If you're looking to hire an artist or if you're an artist looking for a collaborator for your 
+        next project, please reach out! I'm so excited to work with other artists to create new art.
        </div> 
   <hr>
        </section>
