--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
        <div class="center">        
       <p>  After graduating college, I became an art teacher and worked with beginners and
 	      professionals. I love art and my works have been featured in major art galleries across the 
-        globe.</p>
-       <br>
+        globe.
 
-       <p> If you're looking to hire an artist or if you're an artist looking for a collaborator for your 
+      If you're looking to hire an artist or if you're an artist looking for a collaborator for your 
         next project, please reach out! I'm so excited to work with other artists to create new art.</p>
        </div> 
   <hr>
