--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
        <div class="center">        
       <p>  After graduating college, I became an art teacher and worked with beginners and
 	      professionals. I love art and my works have been featured in major art galleries across the 
-        globe.
-If you're looking to hire an artist or if you're an artist looking for a collaborator for your 
+        globe.</p>
+	       
+<p>If you're looking to hire an artist or if you're an artist looking for a collaborator for your 
         next project, please reach out! I'm so excited to work with other artists to create new art.</p>
        </div> 
   <hr>
@@ -119,7 +120,7 @@ If you're looking to hire an artist or if you're an artist looking for a collabo
           <p>I'd love to hear from you! Please feel free to contact or follow me:
           </p>
     
-  
+  <p>
   <ol>
     <ins>
     <li><a href="#linkedin">LinkedIn</a></li>
@@ -127,6 +128,7 @@ If you're looking to hire an artist or if you're an artist looking for a collabo
     <li><a href="#pinterest">Pinterest</a></li>
     </ins>
   </ol>
+		  </p>
 </body>
   </section>
   <!-- Footer section -->
