--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <p>I'd love to hear from you! Please feel free to contact or follow me:
           </p>
     
-  <p>
+  <div class='center'>
   <ol>
     <ins>
     <li><a href="#linkedin">LinkedIn</a></li>
@@ -128,7 +128,7 @@
     <li><a href="#pinterest">Pinterest</a></li>
     </ins>
   </ol>
-		  </p>
+		  </div>
 </body>
   </section>
   <!-- Footer section -->
