--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                       <li>Connecting with like-minded artists</li>
                     </ul>                    
                     Please feel free to take a look at my website and feel free to 
-        <ins><a href="#contactme">contact me</a></ins>
+        <ins><a href="#contact">contact me</a></ins>
                   </section>           
                   
               
